--- a/src/main/resources/Messages.yml
+++ b/src/main/resources/Messages.yml
@@ -72,3 +72,5 @@ Feed Other: "&aYou have restored %player% hunger."
 Smite: "&aYou have summoned a lightning strike on %target%"
 TNT Filled: "&aYou have filled the dispensers with tnt."
 CPS: "&a%target%s highest clicks per second was, %cps% after %length% seconds."
+Weather: "&aYou have successfully set the weather to %type%."
+World Weather: "&aYou have successfully set %world% to %type%."
