--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -90,6 +90,7 @@ commands:
       - bin
       - garbage
   craft:
+  anvil:
   kill:
   god:
   heal:
@@ -98,3 +99,5 @@ commands:
   smite:
   filltnt:
   cps:
+  weather:
+  pweather:
