Code Cleanup, Added new features.

--- a/core/src/main/resources/Messages.yml
+++ b/core/src/main/resources/Messages.yml
@@ -74,3 +74,45 @@ TNT Filled: "&aYou have filled the dispensers with tnt."
 CPS: "&a%target%s highest clicks per second was, %cps% after %length% seconds."
 Weather: "&aYou have successfully set the weather to %type%."
 World Weather: "&aYou have successfully set %world% to %type%."
+
+Error:
+  Prefix: "&cError! "
+  NoPermission: "You do not have permission to use this command."
+  Console: "You cant use this command in console."
+  SpecifyPlayer: "Please specify a player."
+  NoPlayerFound: "That player could not be found."
+  Cooldown: "You have to wait before you can use this again."
+  CooldownItem: "You have to wait before using this item again."
+  SenderInstaceOfPlayer: "Please choose another player."
+  DisabledCommand: "This command has been disabled."
+  MessageEmpty: "Please specify a message."
+  DataFileError: "An error occurred inside of a data file."
+  NoAccount: "Player does not have an account."
+  InvalidAmount: "Amount is invalid."
+  NotEnoughMoney: "That user does not have enough money."
+  UsageEconomy: "Usage: /economy <add/remove/set/reset> <player> <amount>"
+  UsagePay: "Usage: /pay <player> <amount>"
+  NoPlacePlayerHead: "You can not place a players head!"
+  NoPouch: "Please specify a money pouch tier."
+  InvalidPouch: "That money pouch does not exist."
+  SellUsage: "Usage: /sell [hand/all]"
+  TPUsage: "Usage: /tp <player> OR /tp <player> <player>"
+  TPhereUsage: "Usage: /tphere <player, @e, @a>"
+  NoPreviousLocation: "Could not find a previous location."
+  NoWarpNameProvided: "Please specify a warp name."
+  WarpDoesNotExist: "That warp does not exist."
+  WarpAlreadyExist: "That warp already exists."
+  NoWarpsFound: "No Warps found."
+  NoHomeNameProvided: "Please specify a home name."
+  NoHomes: "Please set a home first."
+  HomeDoesNotExist: "That home does not exist."
+  HomeAlreadyExist: "A home already exists with that name."
+  GamemodeUsage: "Usage: /gamemode <gamemode> or /gamemode <player> <gamemode>"
+  WorldGenUsage: "Usage: /world create <name> [normal, nether, end] [normal, flat, amplified, largebiomes] [Generate Structures:true | false]"
+  InvalidWorld: "That is not a valid world or it could not be found."
+  InvalidGameMode: "You need to be in survival or adventure mode!"
+  FullFood: "Already full on food."
+  Length: "Please specify how long for."
+  WeatherType: "Please specify a weather type."
+  SpecifyTime: "Please specify a time."
+  SpecifyWorld: "Please specify a world."
