--- a/core/src/main/resources/Messages.yml
+++ b/core/src/main/resources/Messages.yml
@@ -74,6 +74,8 @@ TNT Filled: "&aYou have filled the dispensers with tnt."
 CPS: "&a%target%s highest clicks per second was, %cps% after %length% seconds."
 Weather: "&aYou have successfully set the weather to %type%."
 World Weather: "&aYou have successfully set %world% to %type%."
+Time: "&aYou have successfully set the time to %time%."
+World Time: "&aYou have successfully set %world% to %time%."
 
 Error:
   Prefix: "&cError! "
