Re-wrote plugin EssentialsZ2FA (Works with google Authenticator)

--- a/2fa/pom.xml
+++ b/2fa/pom.xml
@@ -37,6 +37,12 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>com.warrenstrange</groupId>
+            <artifactId>googleauth</artifactId>
+            <version>1.5.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>me.darkwinged</groupId>
             <artifactId>essentialsz-api</artifactId>
             <version>1.5</version>
