--- a/friends/src/main/resources/plugin.yml
+++ b/friends/src/main/resources/plugin.yml
@@ -2,4 +2,5 @@ name: EssentialsZFriends
 version: 1.0
 main: me.darkwinged.EssentialsZ.EssentialsZFriends
 authors: [ darkwinged ]
+depend: [EssentialsZAPI]
 commands:
