--- a/spawn/src/main/resources/plugin.yml
+++ b/spawn/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: EssentialsZSpawn
 version: 1.1
 main: me.darkwinged.essentialsz.EssentialsZSpawn
 authors: [ darkwinged ]
+depend: [EssentialsZAPI]
 commands:
   setspawn:
   spawn:
