--- a/core/src/main/resources/Messages.yml
+++ b/core/src/main/resources/Messages.yml
@@ -23,6 +23,7 @@ Economy Remove Message: "&aYou have taken %amount% to %player% balance."
 Economy Set Message: "&aYou have set %player% balance to %amount%."
 Economy Reset Message: "&aYou have reset %player% balance."
 Payed: "&aYou have paid %amount% to %player%."
+Money Received: "&aYou have received %amount% from %target%"
 Money Pouch Given: "&aYou have received a money pouch."
 Money Pouch Open: "&aYou have opened a money pouch and got %amount%"
 Autosell Toggle: "&aYou have %setting% autosell."
@@ -65,7 +66,7 @@ Killed Message: "&aYou have killed %player%"
 God Mode: "&aYou have %setting% god mode."
 Healed: "&aYou have been healed."
 Heal Other: "&aYou have healed %player%."
-Fly: "You have %setting% fly."
+Fly: "&aYou have %setting% fly."
 Fly Other: "&aYou have %setting% fly for %player%."
 Feed: "&aYou have restored your hunger."
 Feed Other: "&aYou have restored %player% hunger."
